# PANS

./: CMakeLists.txt  CpuANSDecode.h  CpuANSEncode.h  CpuANSUtils.h  README.md  compress.cpp  compress_and_decompress.sh  decompress.cpp  hans_compress.cpp  pt_to_dat.py
ENEC-V0/: CMakeLists.txt  compress.cpp  decompress.cpp  snec_compress.cpp  snec_decompress.cpp  snec_merge.cpp  snec_table.cpp  snec_utils.h  snec_verify.cpp
HANS-NPU/: CMakeLists.txt  compress.cpp  decompress.cpp  hans_compress.cpp  hans_table.cpp  hans_utils.cpp
HANS/HANS-NPU/: compress.cpp  hans_compress.cpp  hans_decompress.cpp  hans_merge.cpp  hans_table.cpp
HANS/HANS-NPU1/: CMakeLists.txt  compress.cpp  hans_compress.cpp  hans_table.cpp  run.sh
PANS-BASIC/: CpuANSDecode.h  CpuANSEncode.h  CpuANSUtils.h  compress.cpp  decompress.cpp
PANS-main/: .CpuANSDecode.h.swp  .CpuANSEncode.h.swn  CpuANSDecode.h  CpuANSEncode.h  compress.cpp
PANS-step1/: .compress.cpp.swp  CpuANSDecode.h  CpuANSEncode.h  compress.cpp
PANS-step2/: .CpuANSEncode.h.swo  .CpuANSEncode.h.swp  .compress.cpp.swo  .compress.cpp.swp  CMakeLists.txt  CpuANSDecode.h  CpuANSEncode.h  compress.cpp  decompress.cpp
PANS_V0/: .compress.cpp.swp  CpuANSDecode.h  CpuANSEncode.h
PANS_V1/: CpuANSDecode.h  CpuANSEncode.h
PANS_V2/: CpuANSDecode.h  CpuANSEncode.h  decompress.cpp
PANS_V3/: .CpuANSEncode.h.swo  .CpuANSEncode.h.swp  .swp  CpuANSEncode.h  compress.cpp
Self-developed NPU entropy coding/: CMakeLists.txt  compress.cpp  decompress.cpp  hans_compress.cpp  hans_decompress.cpp  hans_host.h  hans_merge.cpp  hans_table.cpp  hans_utils.h  hans_verify.cpp  snec_decompress.cpp  snec_merge.cpp  snec_table.cpp  snec_utils.h  snec_verify.cpp
Self-developed NPU entropy compressor/: compress.cpp  snec_compress.cpp
examples/: compress.cpp  compress.cu  decompress.cpp  decompress.cu
include/ans/: BatchPrefixSum.h  GpuANSCodec.h  GpuANSDecode.h  GpuANSEncode.h  GpuANSStatistics.h
include/utils/: DeviceUtils.h  PtxUtils.h  StaticUtils.h
src/: GpuANS.cpp  GpuANS.cu
